<resources>
    <string name="app_name">BlogClient</string>
    <string name="home">Home</string>
    <string name="new_post">New Post</string>
    <string name="settings">Settings</string>
    <string name="search_hint">Search posts…</string>
    <string name="post_title_hint">Post title</string>
    <string name="post_body_hint">Write your post here…</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="upload">Upload</string>
    <string name="connected_platform">Connected: WordPress</string>
    <string name="logged_in_as">Logged in as: user@example.com</string>
    <string name="upload_to_platform">Upload to Platform</string>
    <string name="no_results">No posts found</string>
    <string name="select_all">Select All</string>
    <string name="delete_selected">Delete Selected</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_delete">Delete selected posts?</string>
    <string name="yes">Yes</string>
    <string name="attach_image">Attach Image</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
</resources>
